# app-and-misc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
apps/: CMakeLists.txt
cmake/: PolyfemAMUtils.cmake
cmake/recipes/: polyfem.cmake
misc/: CMakeLists.txt
